19/02/2023 small work on player choice making. Card now impliments comparable